# poblysh-customer-validation

./: .gitignore  AGENTS.md  CLAUDE.md  QUICKSTART.md  README.md  TESTING.md  interviews.md  project-notes.md
.claude/commands/: git-push.md
.claude/skills/typography/: SKILL.md
backend/: Cargo.toml
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250125_000001_create_users_table.rs  m20250125_000002_create_sessions_table.rs  m20250125_000003_create_password_reset_tokens_table.rs  m20250125_000004_seed_default_admin.rs  m20250215_000005_rehash_admin_password.rs  m20250306_000006_extend_outreach_log.rs  m20250310_000007_contact_trash_and_owner.rs  m20250320_000008_weekly_activity_tracking.rs  m20250325_000009_create_email_conversations.rs
backend/src/: conversations_controller.rs  email_service.rs  main.rs  user_management.rs
backend/src/auth/: email.rs  handlers.rs  middleware.rs  mod.rs  password.rs  rbac.rs
backend/src/entities/: activity_event.rs  contact.rs  conversation.rs  email_attachment.rs  email_credential.rs  email_provider_setting.rs  interview.rs  interview_insight.rs  message.rs  mod.rs  outreach_log.rs  password_reset_token.rs  session.rs  startup.rs  user.rs  weekly_activity_plan.rs  weekly_metric_definition.rs  weekly_synthesis.rs
backend/src/services/: encryption_service.rs  imap_service.rs  mod.rs  smtp_service.rs
frontend/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/app/: app-shell.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/activity/: page.tsx
frontend/app/contacts/: layout.tsx  page.tsx
frontend/app/conversations/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/forgot-password/: layout.tsx  page.tsx
frontend/app/interviews/: layout.tsx  page.tsx
frontend/app/login/: layout.tsx  page.tsx
frontend/app/pipeline/: layout.tsx  page.tsx
frontend/app/profile/: page.tsx
frontend/app/reset-password/: layout.tsx  page.tsx
frontend/app/settings/: page.tsx
frontend/app/settings/activity/: page.tsx
frontend/app/startups/: layout.tsx  page.tsx
frontend/app/startups/[id]/: layout.tsx  page.tsx
frontend/app/synthesis/: layout.tsx  page.tsx
frontend/app/users/: layout.tsx  page.tsx
frontend/components/: AddContactSheet.tsx  AddStartupSheet.tsx  ContactDetailSheet.tsx  ContactForm.tsx  EmailCompose.tsx  ExampleResultTypes.tsx  Navigation.tsx  OutreachForm.tsx  PlanInterviewModal.tsx  Sheet.tsx  Sidebar.tsx  ThemeToggle.tsx
frontend/components/mail/: imap-config-form.tsx  mail-display.tsx  mail-list.tsx
frontend/components/settings/: ActivitySettings.tsx  MailSettingsPanel.tsx
frontend/lib/: activity-constants.ts  api-with-results.ts  api.ts  auth-context.tsx  emailTemplates.ts  hooks.ts  meta.ts  pipeline-statuses.ts  result-utils.ts  time-utils.ts  validation.ts
openspec/changes/add-weekly-activity-tracking/: proposal.md  tasks.md
openspec/changes/archive/2025-11-26-add-contact-sheet-and-trash-management/: proposal.md  tasks.md
openspec/changes/archive/2025-11-26-add-email-conversations/: proposal.md  tasks.md
openspec/changes/archive/2025-11-26-add-email-integration/: proposal.md  tasks.md
openspec/changes/implem-enhanced-interview-platform/: design.md  proposal.md  tasks.md
openspec/specs/contact-management/: spec.md
openspec/specs/email-conversations/: spec.md
openspec/specs/email-outreach/: spec.md
openspec/specs/theme-management/: spec.md
(+19 files in other folders)
