[package]
name = "validation-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
sea-orm = { version = "1.1.19", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Authentication dependencies
argon2 = "0.5"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
axum-extra = { version = "0.9", features = ["cookie"] }
hex = "0.4"
time = "0.3"
